Added more risk views Added fullscreen view Add ability to fix the with of summary text (this could be moved to the backend)

--- a/hugo/layouts/neo4j/baseof.html
+++ b/hugo/layouts/neo4j/baseof.html
@@ -25,5 +25,23 @@
     </div>
 
     {{ partial "page/footer.html"  . }}
+
+    {{ if eq .Params.view "fullscreen"}}
+      <style>
+        body             { background-color: white    }
+        #cypher-query    { padding: 5px ; margin: 0px }
+        #content         { margin-left: 10px    }
+      </style>
+      <script>
+          $('.app-header').hide()
+          //$('h2').hide()
+          $('.app-body').css( { margin: "0px"})
+          $('.container-fluid').css( { padding: "0px"})
+          $('.main').css( { margin : 0 })
+          $('.sidebar').hide()
+          $('.app-footer').hide()
+
+      </script>
+    {{ end }}
   </body>
 </html>
