Fixed issue cause by Neo4J upgrade change of how it handled object keys Stated creating views with both Server DSL REPL and cypher execution query

--- a/hugo/layouts/shortcodes/repl-dsl.html
+++ b/hugo/layouts/shortcodes/repl-dsl.html
@@ -6,8 +6,15 @@
 {{ $result_div := .Scratch.Get "result_div" }}
 
 <script>
+    var repl_Disabled = "{{ .Params.autorun}}" === "no"
     exec_Code_{{safeJS $code_div}} = function()
     {
+        if (repl_Disabled)
+        {
+            console.log('Server side REPL auto run was disabled')
+            repl_Disabled = false
+            return
+        }
         code = myCodeMirror_{{safeJS $code_div}}.getValue()
         url = `/api/dsl/exec?code=${encodeURIComponent(code)}`
 
